--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,7 @@
 
         let selectedCategory = 'total';
         let currentUser = null;
+        let isPaid = false;
 
         // --- TITLE SCREEN ---
         function goToLogin() {
